--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "multer": "^1.3.0",
     "mv": "^2.1.1",
     "ng2-avatar": "^2.3.1",
+    "ngx-clipboard": "^10.0.0",
     "ngx-uploader": "^2.1.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
