--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "gulp build",
     "start": "cross-env UPLOAD_PATH=./upload gulp",
     "postinstall": "typings install"
   },
@@ -34,6 +35,7 @@
     "es6-shim": "^0.35.2",
     "express": "^4.14.0",
     "express-session": "^1.15.0",
+    "gulp-uglifycss": "^1.0.9",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.4",
     "method-override": "^2.3.7",
@@ -58,6 +60,7 @@
     "angular2-template-loader": "^0.6.0",
     "browser-sync": "^2.18.6",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-sass": "^3.1.0",
     "html-webpack-plugin": "^2.26.0",
@@ -66,6 +69,7 @@
     "ts-loader": "^2.0.0",
     "typescript": "^2.1.5",
     "typings": "^2.1.0",
+    "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack-dev-server": "^1.16.2",
     "webpack-stream": "^3.2.0"
   }
