--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "gulp build",
-    "start": "cross-env UPLOAD_PATH=./upload gulp",
+    "build": "cross-env ENV=build gulp build",
+    "dev": "cross-env UPLOAD_PATH=./upload gulp",
+    "start": "cross-env UPLOAD_PATH=./upload node server/server",
     "postinstall": "typings install"
   },
   "keywords": [],
