--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/platform-server": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@coolgk/facebook-sign-in": "^1.0.2",
     "angular2-cookie": "^1.2.6",
     "angular5-social-login": "^1.0.9",
     "basscss": "^8.0.3",
@@ -53,6 +54,7 @@
     "q": "^1.4.1",
     "randomstring": "^1.1.5",
     "reflect-metadata": "^0.1.9",
+    "request": "^2.85.0",
     "rxjs": "^5.0.0-beta.6",
     "zone.js": "^0.7.6"
   },
