--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "cross-env": "^3.1.4",
+    "email-validator": "^1.1.1",
     "es6-shim": "^0.35.2",
     "express": "^4.14.0",
     "express-session": "^1.15.0",
