--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.4",
     "method-override": "^2.3.7",
+    "moment": "^2.22.1",
     "mongoose": "^4.7.7",
     "morgan": "^1.7.0",
     "multer": "^1.3.0",
