--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "@coolgk/facebook-sign-in": "^1.0.2",
     "angular2-cookie": "^1.2.6",
     "angular5-social-login": "^1.0.9",
-    "basscss": "^8.0.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
+    "bootstrap-4-grid": "^2.4.0",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "cross-env": "^3.1.4",
